fix bugs on mobile view

--- a/character/character-styles.css
+++ b/character/character-styles.css
@@ -211,7 +211,17 @@ body{
 
     .details{
         padding: 30px 0px 0px 0px;
+        width: 50%;
     }
+
+    .image{
+        width: 50%;
+    }
+
+    .details>h1, .details>p{
+        width: 90%;
+    }
+
 
     .see-more{
         padding-top: 20px;
