--- a/homepage/styles.css
+++ b/homepage/styles.css
@@ -278,7 +278,7 @@ body{
 
     #nav-bar>div p{
         font-size: 1.3rem;
-        padding: 19px 0;
+        padding: 35px 0;
     }
 
 
